[gd_scene load_steps=9 format=3 uid="uid://bfgno620c03ib"]

[ext_resource type="Script" path="res://Andy/Amulet.gd" id="1_3g7w1"]
[ext_resource type="Texture2D" uid="uid://cw4l4c73bxndy" path="res://Belinda/Amulet_2.png" id="2_r4i8q"]
[ext_resource type="Texture2D" uid="uid://cn0mu3linlwrh" path="res://Belinda/Amulet_3.png" id="3_m3ufx"]
[ext_resource type="Texture2D" uid="uid://8i8emejb1q7j" path="res://Belinda/Amulet_4.png" id="4_ire1p"]
[ext_resource type="Texture2D" uid="uid://ceisxwlltoses" path="res://Belinda/Amulet_1.png" id="5_3u28l"]
[ext_resource type="AudioStream" uid="uid://cmf6x8ht3xydp" path="res://Andy/clock.MP3" id="6_7p2qf"]
[ext_resource type="AudioStream" uid="uid://chs4srfmh7r81" path="res://Andy/clocking.MP3" id="7_e8150"]
[ext_resource type="FontFile" uid="uid://dvldyfa6l2w01" path="res://Zhu/something to use/font for all words.ttf" id="8_yw8gw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3g7w1")
shard1_texture = ExtResource("2_r4i8q")
shard2_texture = ExtResource("3_m3ufx")
shard3_texture = ExtResource("4_ire1p")
final_amulet_texture = ExtResource("5_3u28l")
pickup_sound = ExtResource("6_7p2qf")
final_amulet_sound = ExtResource("7_e8150")

[node name="Shard1Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -165.0
offset_right = -19.0
offset_bottom = -105.0
grow_horizontal = 0
grow_vertical = 2

[node name="Shard2Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -209.0
offset_right = -22.0
offset_bottom = -169.0
grow_horizontal = 0
grow_vertical = 2

[node name="Shard3Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -264.0
offset_right = -22.0
offset_bottom = -224.0
grow_horizontal = 0
grow_vertical = 2

[node name="FinalAmuletIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -111.0
offset_right = -16.0
offset_bottom = -46.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_3u28l")

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="MissingShardsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 555.0
offset_right = 902.0
offset_bottom = 615.0
theme_override_fonts/font = ExtResource("8_yw8gw")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1
